<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2026 Hai Zhang <dreaming.in.code.zh@gmail.com>
  ~ All Rights Reserved.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_picture_in_picture"
        android:orderInCategory="100"
        android:title="@string/video_viewer_picture_in_picture"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_screen_orientation"
        android:orderInCategory="100"
        android:title="@string/video_viewer_screen_orientation"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_play_from_beginning"
        android:orderInCategory="100"
        android:title="@string/video_viewer_play_from_beginning"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never" />
</menu>
